--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   
 
-
+<div id=contact>
 <p>Contact me:</p>
 <a href="https://wa.link/nyd9kx" target="_blank" title="Chat me up on WhatsApp" class="social">
 <img srcset="icons8-whatsapp-48.png" >
@@ -37,5 +37,6 @@
     <img srcset="icons8-gmail-48.png" >
     </a>
 <a href="https://www.linkedin.com/in/daniel-sam-nwuche-1b8a96192" target="_blank" title="Message me on LinkedIn" class="social"><img srcset="icons8-linkedin-48.png"></a>
+</div>
 </body>
 </html>
