--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   
 
-<div id=contact>
+<div id="contact">
 <p>Contact me:</p>
 <a href="https://wa.link/nyd9kx" target="_blank" title="Chat me up on WhatsApp" class="social">
 <img srcset="icons8-whatsapp-48.png" >
